Add part 4 + some fixes

--- a/Seminar03.ipynb
+++ b/Seminar03.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1. Loops"
+    "## 3.1. Branching and loops"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1.1. Conditional loops"
+    "### 3.1.1. Conditional branching"
    ]
   },
   {
@@ -247,7 +247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<enumerate object at 0x7f1de46ce510>\n",
+      "<enumerate object at 0x7f27d80451f8>\n",
       "a 0\n",
       "b 1\n",
       "c 2\n",
@@ -274,7 +274,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<enumerate object at 0x7f1de46d85e8>\n",
+      "<enumerate object at 0x7f27d804b4c8>\n",
       "a 0\n",
       "b 1\n",
       "c 2\n",
@@ -458,7 +458,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.5\n"
+      "5.5\n"
      ]
     }
    ],
@@ -467,7 +467,7 @@
     "    average = 0.5 * (a + b)\n",
     "    return average\n",
     "\n",
-    "print(AverageOfTwo(3, 6))"
+    "print(AverageOfTwo(5, 6))"
    ]
   },
   {
@@ -561,7 +561,7 @@
     }
    ],
    "source": [
-    "def AddToList(value, container=[]):\n",
+    "def AddToList(value, container=list()):\n",
     "    container.append(value)\n",
     "    return container\n",
     "\n",
@@ -824,7 +824,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time is 3.814697265625e-06\n",
+      "Elapsed time is 5.0067901611328125e-06\n",
       "3.0\n"
      ]
     }
@@ -841,8 +841,8 @@
     "    return wrapper\n",
     "\n",
     "@TimingDecorator\n",
-    "def Average(*kwargs):\n",
-    "    average = sum(kwargs) / len(kwargs)\n",
+    "def Average(*args):\n",
+    "    average = sum(args) / len(args)\n",
     "    return average\n",
     "\n",
     "print(Average(1, 2, 3, 4, 5))"
@@ -860,7 +860,7 @@
      "output_type": "stream",
      "text": [
       "SimpleDecorator start\n",
-      "Elapsed time is 3.5762786865234375e-06\n",
+      "Elapsed time is 2.6226043701171875e-06\n",
       "3.0\n"
      ]
     }
@@ -893,7 +893,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time is 2.86102294921875e-06\n",
+      "Elapsed time is 3.814697265625e-06\n",
       "3.0\n"
      ]
     }
@@ -1038,7 +1038,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object <genexpr> at 0x7f1de4f07e08>\n",
+      "<generator object <genexpr> at 0x7f27d807fe08>\n",
       "Size: 88\n",
       "0 1 4 9 16 25 36 49 64 81 "
      ]
@@ -1200,7 +1200,7 @@
      "output_type": "stream",
      "text": [
       "Documentation: Class description and help\n",
-      "<__main__.Point object at 0x7f1de46d5860>\n",
+      "<__main__.Point object at 0x7f27d8059ac8>\n",
       "1.4142135623730951\n"
      ]
     }
@@ -1852,7 +1852,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exceptions are thrown in case of errors detected during execution. https://docs.python.org/3/tutorial/errors.html"
+    "[Exceptions](https://docs.python.org/3.5/library/exceptions.html) are thrown in case of errors detected during execution."
    ]
   },
   {
@@ -1879,7 +1879,7 @@
     "except ZeroDivisionError as e:\n",
     "    print(e)\n",
     "else:\n",
-    "    print('we are allowed to divide ny zero now')\n",
+    "    print('we are allowed to divide ny zero somehow')\n",
     "finally:\n",
     "    print('done')\n",
     "    "
