--- a/Seminar03.ipynb
+++ b/Seminar03.ipynb
@@ -4,28 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Loops, functions, classes, i/o, exceptions, context managers, modules and packages"
+    "# 3. Ветвления, циклы, функции, классы, ввод и вывод, исключения, менеджеры контекста, модули и пакеты"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1. Branching and loops"
+    "## 3.1. Ветвления и циклы"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1.1. Conditional branching"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Conditional statements formatting is similar to functions definitions: header and indented block."
+    "### 3.1.1. Веткления"
    ]
   },
   {
@@ -206,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1.2. For loops"
+    "### 3.1.2. Циклы `for`"
    ]
   },
   {
@@ -349,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1.3. While loop"
+    "### 3.1.3. Циклы `while`"
    ]
   },
   {
@@ -437,14 +430,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2. Functions"
+    "## 3.2. Функции"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2.1. Fixed number of arguments"
+    "### 3.2.1. С фиксированным набором аргументов"
    ]
   },
   {
@@ -474,7 +467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can specify types in function declaration (Python 3.5+). See: https://docs.python.org/3/library/typing.html"
+    "Начиная с Python 3.5 можно указывать тип передаваемых аргументов. Тогда некоторые IDE будут проверять соответствие типов при вызове. Но это реализовано не в самом языке. Подробнее: https://docs.python.org/3/library/typing.html"
    ]
   },
   {
@@ -512,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2.2. Default arguments"
+    "### 3.2.2. Значения аргументов по умолчанию"
    ]
   },
   {
@@ -542,7 +535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Do **not** use mutable objects as default values, it will cause undesired behaviour. See example below."
+    "**Не используйте** изменяемые объекты как значения по умолчанию, это приводит к неожиданным эффектам, см. пример ниже."
    ]
   },
   {
@@ -614,7 +607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2.3. Variable number of arguments"
+    "### 3.2.3. Переменное число аргументов"
    ]
   },
   {
@@ -672,7 +665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The full function definition with all variable types:"
+    "Полный заголовок функции и пример её использования:"
    ]
   },
   {
@@ -705,7 +698,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2.4. Decorators"
+    "### 3.2.4. Декораторы"
    ]
   },
   {
@@ -714,7 +707,7 @@
     "collapsed": true
    },
    "source": [
-    "Functions in Python are objects. That means that you can assign function to a variable, bypass it as argument."
+    "Функции в Python являются объектами. Это означает, что вы можете присвоить объект-функцию переменной, или передать её в качестве аргумента в другую функцию."
    ]
   },
   {
@@ -755,7 +748,7 @@
     "collapsed": true
    },
    "source": [
-    "Standart function map does the same:"
+    "Функция `map` из стандартной библиотеки делает то же самое:"
    ]
   },
   {
@@ -781,7 +774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Decorator is a function, that gets function as argument and returns function."
+    "Декоратор — это функция, которая принимает функцию на вход и возвращает также функцию."
    ]
   },
   {
@@ -879,7 +872,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Decorators are syntaxic sugar. You could write instead the following code:"
+    "Декораторы — это лишь синтаксический сахар. Вместо кода из предыдущей ячейки вы могли бы написать:"
    ]
   },
   {
@@ -922,7 +915,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2.5. Generators"
+    "### 3.2.5. Генераторы"
    ]
   },
   {
@@ -931,7 +924,7 @@
     "collapsed": true
    },
    "source": [
-    "Generator is a function, that maintains state between values produced. In ordinary functions you use **return** keyword to produce one value. In generators **yield** used instead.\n"
+    "Генератор — это функция, сохраняющая свое состояние между вызовами. В обычных функциях для возврата значения используется ключевое слово **return**, в генераторах вместо него используется **yield**"
    ]
   },
   {
@@ -965,7 +958,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is possible to use generators in for loops:"
+    "Генераторы можно использовать в циклах:"
    ]
   },
   {
@@ -1024,7 +1017,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Generator expressions](https://www.python.org/dev/peps/pep-0289/) are high performance, memory efficient generalization of list comprehensions. Syntax is the same, except for brackets:"
+    "[Генераторные выражения](https://www.python.org/dev/peps/pep-0289/) — высокопроизводительное и эффективное по памяти обобщение списковых включений. Синтаксис используется такой же, только скобки круглые:"
    ]
   },
   {
@@ -1058,7 +1051,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And the same example, but with [list comprehension](https://www.python.org/dev/peps/pep-0202/):"
+    "Тот же пример, но с использованием [списковых включений](https://www.python.org/dev/peps/pep-0202/):"
    ]
   },
   {
@@ -1092,7 +1085,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2.6. Lambda-functions"
+    "### 3.2.6. Лямбда-функции"
    ]
   },
   {
@@ -1101,7 +1094,7 @@
     "collapsed": true
    },
    "source": [
-    "Lambda-functions are nameless one-line (mostly) functions."
+    "Лямбда-функции — это анонимные, чаще всего однострочные функции."
    ]
   },
   {
@@ -1169,23 +1162,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3. Classes"
+    "## 3.3. Классы"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Class is a user-defined type with data members (class and instance variables) and methods, accessed via dot notation.\n",
+    "Класс — определенный пользователем тип данных с полями и методами.\n",
     "\n",
-    "See details in [documentation](https://docs.python.org/3/tutorial/classes.html)."
+    "Документация: https://docs.python.org/3/tutorial/classes.html"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3.1. Methods and variables"
+    "### 3.3.1. Методы и поля"
    ]
   },
   {
@@ -1229,7 +1222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can assign method objects to a variable to call them later:"
+    "С методами класса можно обращаться как с обычными функциями:"
    ]
   },
   {
@@ -1257,7 +1250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Class variable `word` (do not use mutable types as class variables, you will have the same problems as for default values in functions):"
+    "Поле класса `word` (будет один для всех объектов данного класса, лучше не использовать изменяемый тип, проблемы те же, что и в значениях аргументов по умолчанию у функций):"
    ]
   },
   {
@@ -1320,7 +1313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3.2. Private methods"
+    "### 3.3.2. Приватные методы"
    ]
   },
   {
@@ -1329,7 +1322,7 @@
     "collapsed": true
    },
    "source": [
-    "All methods in Python are public. But there is a coding convetion about naming of 'private' methods: at least two leading underscores and at most one trailing underscore. See https://docs.python.org/3/tutorial/classes.html#private-variables-and-class-local-references"
+    "Все методы класса в Python публичные. Но есть соглашения по поводу именования 'приватных' методов: как минимум два подчеркивания в начале имени и не более одного в конце. См. https://docs.python.org/3/tutorial/classes.html#private-variables-and-class-local-references"
    ]
   },
   {
@@ -1368,7 +1361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But you can call it anyway:"
+    "Но даже такой метод можно вызвать, учитывая преобразование имен:"
    ]
   },
   {
@@ -1395,14 +1388,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3.3. Inheritance"
+    "### 3.3.3. Наследование"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read more on `super`: https://docs.python.org/3/library/functions.html#super"
+    "Подробнее про `super`: https://docs.python.org/3/library/functions.html#super"
    ]
   },
   {
@@ -1439,7 +1432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In case of multiple base classes, `super()` allows you to use cooperative inheritance and call all base classes constructors in order, defined by MRO (see http://www.artima.com/weblogs/viewpost.jsp?thread=281127). Here be the dragons."
+    "В случае нескольких базовых классов, `super()` вызывает конструкторы у родительских классов по порядку MRO (см. http://www.artima.com/weblogs/viewpost.jsp?thread=281127). Тут живут драконы."
    ]
   },
   {
@@ -1485,16 +1478,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3.4. Magic method"
+    "### 3.3.4. Магические методы"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Magic methods are special methods with predefined names: https://docs.python.org/3/reference/datamodel.html#specialnames\n",
+    "Магическими называют специальные методы с заранее определенными именами: https://docs.python.org/3/reference/datamodel.html#specialnames\n",
     "\n",
-    "Examples of some of them are below."
+    "Несколько примеров подобных имен ниже. Отличительная черта — по два подчеркивания в начале и в конце имени метода."
    ]
   },
   {
@@ -1559,14 +1552,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.4. Input and output"
+    "## 3.4. Ввод и вывод"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4.1. Console"
+    "### 3.4.1. В консоль и из консоли"
    ]
   },
   {
@@ -1697,7 +1690,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4.2. File"
+    "### 3.4.2. В файл и из файла"
    ]
   },
   {
@@ -1845,14 +1838,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.5. Exceptions"
+    "## 3.5. Исключения"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Exceptions](https://docs.python.org/3.5/library/exceptions.html) are thrown in case of errors detected during execution."
+    "Документация: https://docs.python.org/3.5/library/exceptions.html"
    ]
   },
   {
@@ -1891,7 +1884,7 @@
     "collapsed": true
    },
    "source": [
-    "Or you cat handle all exceptions (not recommended):"
+    "Либо можно пойматьвсе типы исключений (но этот способ не рекомендуется):"
    ]
   },
   {
@@ -1920,7 +1913,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is good practice to define own exception classes for different errors:"
+    "Хорошей практикой является создание своих классов для ошибок:"
    ]
   },
   {
@@ -1954,19 +1947,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.6. Context managers"
+    "## 3.6. Менеджеры контекста"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Context managers allow to work with resources safely. They garantee that `__exit__` will be called. See https://jeffknupp.com/blog/2016/03/07/python-with-context-managers/ "
+    "Позволяют безопасно работать с ресурсами, которые надо освобождать. В них гарантируется,что `__exit__` будет вызван. См. https://jeffknupp.com/blog/2016/03/07/python-with-context-managers/ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -2039,14 +2032,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.7. Modules and packages"
+    "## 3.7. Модули и пакеты модулей"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A module is a python file with extension .py, containing definitions and statements. For example, lets create module helpers.py."
+    "Модуль — это файл с расширением `.py`, содержащий "
    ]
   },
   {
@@ -2111,19 +2104,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is possible to import only one function from module:\n",
+    "Можно импортировать только одну функцию из модуля:\n",
     "\n",
     "```python\n",
     "from helpers import GetHost\n",
     "```\n",
     "\n",
-    "or all functions from module (bad practice):\n",
-    "\n",
+    "Или всё, определеённое в модуле (но так делать не рекомендуется).\n",
     "```python\n",
     "from helpers import *\n",
     "```\n",
     "\n",
-    "In both cases function is called directly, without naming module:\n",
+    "В обоих случаях имя модуля при вызове функции указывать не надо:\n",
     "\n",
     "```python\n",
     "print(GetHost('http://yandex.ru/maps'))\n",
@@ -2134,7 +2126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sometimes it is useful if module can work in case it is called directly as a file. For such tasks use recipe (if script is called directly, special variable `__name__` is \"`__main__`\"):\n",
+    "Иногда нужно добавить в библиотеку функциональность, позволяющую выполнять код из библиотеки, если она не импортирована, а передана импретатору напрямую (в таком случае встроенная переменная `__name__` равна \"`__main__`\"):\n",
     "\n",
     "\n",
     "```python\n",
@@ -2199,7 +2191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Documentation line is the first noncomment line in class, function or module. It will be returned by help:"
+    "Документация возвращается при вызове функции `help()`"
    ]
   },
   {
@@ -2241,25 +2233,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python looks for modules in order:\n",
+    "Python ищет модули по путям в следующем порядке:\n",
     "\n",
-    "1. working directory or directory with script file\n",
+    "1. рабочая директория\n",
     "2. PYTHONPATH\n",
-    "3. standart paths, depends on python distribution"
+    "3. другие стандартные пути"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Packages](https://docs.python.org/3/tutorial/modules.html#packages) are a way of structuring Python’s module namespace."
+    "[Пакеты](https://docs.python.org/3/tutorial/modules.html#packages) позволяют структурироать модули."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example structure:\n",
+    "Пример структуры пакета:\n",
     "\n",
     "* helpers/\n",
     " * \\_\\_init\\_\\_.py\n",
@@ -2275,14 +2267,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `__init__.py` files are required to make Python treat the directories as containing packages."
+    "Файлы `__init__.py` нужны для того, чтобы Python понимал, что эти папки — пакет."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let the function GetHost is defined in host.py. You can use it:\n",
+    "Пусть функция `GetHost` определена в host.py. Тогда пример её использования из пакета будет выглядеть так:\n",
     "    \n",
     "```python\n",
     "import helpers.url.host\n",
