--- a/Seminar05.ipynb
+++ b/Seminar05.ipynb
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -1771,7 +1771,7 @@
        "9     S3  300  300  300      9.100         0.169         224.000"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1784,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -1826,13 +1826,165 @@
        "4  F42A  450  450  450      9.996          0.33         59000.0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df[df.Name == 'F42A']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Nx</th>\n",
+       "      <th>Ny</th>\n",
+       "      <th>Nz</th>\n",
+       "      <th>Res (mcm)</th>\n",
+       "      <th>Lab porosity</th>\n",
+       "      <th>Mean perm (mD)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A1</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "      <td>3.850</td>\n",
+       "      <td>0.429</td>\n",
+       "      <td>7220.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Berea</td>\n",
+       "      <td>400</td>\n",
+       "      <td>400</td>\n",
+       "      <td>400</td>\n",
+       "      <td>5.345</td>\n",
+       "      <td>0.196</td>\n",
+       "      <td>1286.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C1</td>\n",
+       "      <td>400</td>\n",
+       "      <td>400</td>\n",
+       "      <td>400</td>\n",
+       "      <td>2.850</td>\n",
+       "      <td>0.233</td>\n",
+       "      <td>1102.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C2</td>\n",
+       "      <td>400</td>\n",
+       "      <td>400</td>\n",
+       "      <td>400</td>\n",
+       "      <td>5.345</td>\n",
+       "      <td>0.168</td>\n",
+       "      <td>72.333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Named</td>\n",
+       "      <td>450</td>\n",
+       "      <td>450</td>\n",
+       "      <td>450</td>\n",
+       "      <td>9.996</td>\n",
+       "      <td>0.330</td>\n",
+       "      <td>59000.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>F42B</td>\n",
+       "      <td>450</td>\n",
+       "      <td>450</td>\n",
+       "      <td>450</td>\n",
+       "      <td>10.002</td>\n",
+       "      <td>0.333</td>\n",
+       "      <td>52300.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>F42C</td>\n",
+       "      <td>450</td>\n",
+       "      <td>450</td>\n",
+       "      <td>450</td>\n",
+       "      <td>10.002</td>\n",
+       "      <td>0.331</td>\n",
+       "      <td>50400.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>S1</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "      <td>8.683</td>\n",
+       "      <td>0.141</td>\n",
+       "      <td>1678.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>S2</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "      <td>4.956</td>\n",
+       "      <td>0.246</td>\n",
+       "      <td>3898.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>S3</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "      <td>9.100</td>\n",
+       "      <td>0.169</td>\n",
+       "      <td>224.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Name   Nx   Ny   Nz  Res (mcm)  Lab porosity  Mean perm (mD)\n",
+       "0     A1  300  300  300      3.850         0.429        7220.000\n",
+       "1  Berea  400  400  400      5.345         0.196        1286.000\n",
+       "2     C1  400  400  400      2.850         0.233        1102.000\n",
+       "3     C2  400  400  400      5.345         0.168          72.333\n",
+       "4  Named  450  450  450      9.996         0.330       59000.000\n",
+       "5   F42B  450  450  450     10.002         0.333       52300.000\n",
+       "6   F42C  450  450  450     10.002         0.331       50400.000\n",
+       "7     S1  300  300  300      8.683         0.141        1678.000\n",
+       "8     S2  300  300  300      4.956         0.246        3898.000\n",
+       "9     S3  300  300  300      9.100         0.169         224.000"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.set_value(4, 'Name', 'Named')"
    ]
   },
   {
@@ -2666,6 +2818,15 @@
    "source": [
     "df['Lab porosity'].plot.bar()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
